# startalk_pc

./: .gitignore  CMakeLists.txt  QTalk_en.ts  QTalk_ko.ts  README.CN.md  README.EN.md  README.md
CustomUi/: CMakeLists.txt  GroupMemberPopWnd.hpp  HeadPhotoLab.cpp  HeadPhotoLab.h  ImageLabel.cpp  ImageLabel.h  LinkButton.cpp  LiteMessageBox.cpp  LiteMessageBox.h  MedalWgt.cpp  MedalWgt.h  NTMessageBox.cpp  NTMessageBox.h  NavigationItem.cpp  NavigationItem.h  QtMessageBox.cpp  QtMessageBox.h  SearchEdit.hpp  TitleBar.cpp  TitleBar.h  UCButton.cpp  UCButton.h  UShadowBorder.cpp  UShadowBorder.h  UShadowWnd.cpp
DataBasePlug/: CMakeLists.txt  CacheDataDao.cpp  CacheDataDao.h  ConfigDao.cpp  ConfigDao.h  DaoInterface.h  DataBasePlug.cpp  DataBasePlug.h  DbConfig.cpp  DbConfig.h  FriendListDao.cpp  FriendListDao.h  GroupDao.cpp  GroupDao.h  GroupMemberDao.cpp  GroupMemberDao.h  MedalListDao.cpp  MedalListDao.h  MessageDao.cpp  MessageDao.h  ProcessExceptDao.cpp  ProcessExceptDao.h  QuickReplyDao.cpp  QuickReplyDao.h  SessionListDao.cpp  SessionListDao.h  TriggerConfig.cpp  TriggerConfig.h  UserDao.cpp  UserDao.h  UserMedalDao.cpp  UserMedalDao.h  UserSupplementDao.cpp  UserSupplementDao.h
Emoticon/: CMakeLists.txt  EmoCellWidget.cpp  EmoIconWgt.cpp  EmoPreviewWgt.cpp  EmoticonMainWgt.cpp  EmoticonMainWgt.h  EmoticonManager.cpp  EmoticonManager.h  EmoticonStruct.h  EmoticonView.cpp  EmoticonView.h  LocalEmoticon.cpp  MessageManager.cpp  NetEmoticon.cpp  emoticon.qrc
EventBus/: EventBus.cpp  EventBus.h
LogicCommunication/: Communication.cpp  Communication.h  FileHelper.cpp  FileHelper.h  GroupManager.cpp  GroupManager.h  HotLinesConfig.cpp  HotLinesConfig.h  MessageManager.cpp  MessageManager.h  OfflineMessageManager.cpp  OfflineMessageManager.h  OnLineManager.cpp  OnLineManager.h  SearchManager.cpp  UserConfig.cpp  UserConfig.h  UserManager.cpp  UserManager.h
LogicManager/: LogicManager.cpp  (+1 more)
QTalk/: CMakeLists.txt  GlobalManager.cpp  GlobalManager.h  LocalServer.cpp  LocalServer.h  MacApp.h  MacApp.mm  MainWindow.cpp  MainWindow.h  MessageManager.cpp  MessageManager.h  NoOperationThread.cpp  NoOperationThread.h  PlugManager.cpp  PlugManager.h  ProcessInfo.cpp  ProcessInfo.h  QTalk.qrc  QTalkApp.cpp  QTalkApp.h  StyleManager.cpp  StyleManager.h  SystemTray.cpp  SystemTray.h  SystemTrayPopWnd.cpp  SystemTrayPopWnd.h  UIGolbalManager.cpp  UIGolbalManager.h  main.cpp  pluginmanager.cpp  pluginmanager.h  startalk.info.plist  stylesheetmanager.cpp
QTalk/config/: pluginManager.json  qtalk_en.qm  qtalk_ko.qm
QTalk/qml/: PkgDownload.cpp  PkgDownload.h  QmlView.cpp  QmlView.h  qml.qrc
QTalk/qml/qml/: Button.qml  main.qml  updateClient.qml
QTalk/style1/: Emoticon.qss  UIAddressBook.qss  UIChatViewPlug.qss  UILoginPlug.qss  UINavigationPlug.qss  UIPictureBrowser.qss  UITitlebarPlug.qss  app.qss  data.xml
QTalk/style2/: Emoticon.qss  UIAddressBook.qss  UIChatViewPlug.qss  UILoginPlug.qss  UINavigationPlug.qss  UIPictureBrowser.qss  UITitlebarPlug.qss  app.qss  data.xml
QtUtil/: CMakeLists.txt
QtUtil/Entity/: JID.cpp  JID.h
QtUtil/Utils/: Log.cpp  Log.h  utils.cpp  utils.h
QtUtil/lib/http/: HttpRequest.h  QtHttpRequest.cpp  QtHttpRequest.h
QtUtil/lib/ini/: ConfigLoader.cpp
QtUtil/lib/spdlog/details/: os.h  thread_pool.h
QtUtil/nJson/: nJson.h
UIChatViewPlug/: AtMessageTip.cpp  AtMessageTip.h  AtMessageView.cpp  AtMessageView.h  CMakeLists.txt  ChatMainDelegate.cpp  ChatMainDelegate.h  ChatMainSoreModel.cpp  ChatMainSoreModel.h  ChatMainWgt.cpp  ChatMainWgt.h  ChatUtil.cpp  ChatUtil.h  ChatViewItem.cpp  ChatViewItem.h  ChatViewMainPanel.cpp  ChatViewMainPanel.h  DropWnd.cpp  DropWnd.h  GIFManager.cpp  GIFManager.h  GroupChatSidebar.cpp  GroupChatSidebar.h  GroupItemDelegate.cpp  GroupItemDelegate.h  GroupMember.cpp  GroupMember.h  GroupTopic.cpp  GroupTopic.h  GroupTopicEditor.cpp  GroupTopicEditor.h  InputWgt.cpp  InputWgt.h  MacNotification.h  MacNotification.mm  MessageAnalysis.cpp  MessageAnalysis.h  MessageManager.cpp  MessageManager.h  MessagePrompt.cpp  (+25 more)
UIChatViewPlug/MessageItems/: AudioVideoItem.cpp  AudioVideoItem.h  CodeItem.cpp  CodeItem.h  CommonTrdInfoItem.cpp  CommonTrdInfoItem.h  EmojiMessItem.cpp  EmojiMessItem.h  FileSendReceiveMessItem.cpp  FileSendReceiveMessItem.h  HotLineAnswerItem.cpp  HotLineAnswerItem.h  HotLineTipItem.cpp  HotLineTipItem.h  ImageMessItem.cpp  ImageMessItem.h  MedalMind.cpp  MedalMind.h  MeetingRemindItem.cpp  MeetingRemindItem.h  MessageItemBase.cpp  MessageItemBase.h  NoteMessageItem.cpp  NoteMessageItem.h  NoticeMessageItem.cpp  NoticeMessageItem.h  SystemMessageItem.cpp  SystemMessageItem.h  TextBrowser.cpp  TextBrowser.h  TextMessItem.cpp  TextMessItem.h  TipMessageItem.cpp  TipMessageItem.h  VideoMessageItem.cpp  VideoMessageItem.h  VoiceMessageItem.cpp  VoiceMessageItem.h
UIChatViewPlug/QRcode/: MakeQRcode.cpp  MakeQRcode.h  QRcode.cpp  QRcode.h  ScanMainFrm.cpp  ScanMainFrm.h  ScanQRcode.cpp  ScanQRcode.h  TipButton.cpp  TipButton.h
UIChatViewPlug/blocks/: AtBlock.h  ImageBlock.h  block_define.h
UIChatViewPlug/code/: CodeEdit.cpp  CodeEdit.h  CodeShell.cpp  CodeShell.h  CodeShowWnd.cpp  CodeShowWnd.h  SendCodeWnd.cpp  SendCodeWnd.h
UIChatViewPlug/search/: FileRecordWnd.cpp  FileRecordWnd.h  ImageDelegate.cpp  ImageDelegate.h  ItemWgt.cpp  ItemWgt.h  LocalSearchMainWgt.cpp  LocalSearchMainWgt.h  MessageAnalysis.cpp  MessageAnalysis.h  MessageDelegate.cpp  MessageDelegate.h  MessageRecordManager.cpp  MessageRecordManager.h  MessageSortModel.cpp  MessageSortModel.h  SearchItemDelegate.cpp  SearchItemDelegate.h  SearchItemWgt.cpp  SearchItemWgt.h  SearchListDelegate.cpp  SearchListDelegate.h  SearchUserView.cpp  SearchUserView.h
UIChatViewPlug/sound/amr/: VoiceHelper.cpp  VoiceHelper.h  WavOutput.cpp  WavOutput.h
UILoginPlug/: CMakeLists.txt  LoginPanel.cpp  LoginPanel.h  MessageManager.cpp  MessageManager.h  NavManager.cpp  NavManager.h  NavView.cpp  NavView.h  QWebLogin.cpp  UILoginPlug.cpp  image1.qrc  tips.json
breakpad/: CMakeLists.txt
breakpad/client/windows/handler/: exception_handler.h
(+408 files in other folders)
